[tool.poetry]
name = "narratelab"
version = "0.1.0"
description = ""
authors = ["Timothy Wang <timothywangdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
psaw = "^0.1.0"
pandas = "^1.3.0"
plotly = "^5.1.0"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
pyLDAvis = "^3.3.1"
chart-studio = "^1.1.0"
spacy = "^3.0.6"
gensim = "^4.0.1"
wordcloud = "^1.8.1"
numpy = "^1.21.0"
regex = "^2021.7.5"
python-Levenshtein = "^0.12.2"
nbconvert = "^6.1.0"
clevercsv = "^0.6.8"
redditcleaner = "^1.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
